# ViralCheck

./: README.md  main.py  predict.py  pyproject.toml  requirements.txt
main/: __init__.py  config.py  models.py  site.db
main/main/: routes.py
main/posts/: forms.py  routes.py
main/static/css/: style.css
main/templates/: account.html  advice.html  base.html  create_post.html  gallery.html  index.html  instagram.html  login.html  post.html  register.html  reset_request.html  reset_token.html  results.html  user_posts.html
main/templates/errors/: 403.html  404.html  500.html
main/users/: forms.py  routes.py  utils.py
training/: thumbnail_classifier.ipynb  views_predictor.ipynb
training/data/: scrape_channel.py  scrape_video.py
training/model/: train_model.py
