[tool.poetry]
name = "sinfulgoldenrodstrategy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1"
flask-wtf = "^0.14.3"
wtforms = "^2.3"
flask-sqlalchemy = "^2.4"
email-validator = "^1.1"
pandas = "^1.0"
flask-bcrypt = "^0.7.1"
flask-login = "^0.5.0"
itsdangerous = "^1.1"
flask-mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
